Add doc for Hiera users